# virtio-media

./: .gitignore  Kbuild  Makefile  README.md  TRY_IT_OUT.md  descriptor.c  descriptor.h  protocol.h  scatterlist_filler.c  scatterlist_filler.h  session.h  virtio_media.h  virtio_media_driver.c  virtio_media_ioctls.c
device/: Android.bp  Cargo.toml  cargo_embargo.json
device/src/: devices.rs  io.rs  ioctl.rs  lib.rs  memfd.rs  mmap.rs  poll.rs  protocol.rs
device/src/devices/: simple_device.rs  v4l2_device_proxy.rs  video_decoder.rs
device/src/io/: be.rs  le.rs
driver/: Kbuild  protocol.h  scatterlist_builder.c  scatterlist_builder.h  scatterlist_filler.c  scatterlist_filler.h  session.h  virtio_media.h  virtio_media_driver.c  virtio_media_ioctls.c
extras/ffmpeg-decoder/: Cargo.toml  README.md  build.rs
extras/ffmpeg-decoder/src/: event_queue.rs  ffmpeg.rs  lib.rs
extras/ffmpeg-decoder/src/ffmpeg/: avcodec.rs  avutil.rs  error.rs  swscale.rs
