[package]
name = "virtio-media"
version = "0.0.1"
license = "BSD-3-Clause"
description = "Device support for virtio-media"
repository = "https://github.com/chromeos/virtio-media"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.32"
enumn = "0.1.12"
log = "0.4.20"
libc = "0.2.151"
nix = { version = "0.28", features = ["fs"] }
thiserror = "1.0.38"
zerocopy = { version = "0.7.31", features = ["derive"] }
v4l2r = { git = "https://github.com/Gnurou/v4l2r", rev = "00cce08" }

[features]
default = ["simple-device"]
simple-device = []
