[package]
name = "virtio-media"
version = "0.0.6"
license = "BSD-3-Clause"
description = "Device support for virtio-media"
repository = "https://github.com/chromeos/virtio-media"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.32"
enumn = "0.1.12"
libc = "0.2.151"
log = "0.4.20"
nix = { version = "0.28", features = ["fs"] }
thiserror = "1.0.38"
# Use 64-bit bindings as this is the format used by virtio-media
v4l2r = { version = "0.0.5", features = ["arch64"] }
zerocopy = { version = "0.7.31", features = ["derive"] }

[features]
default = ["simple-device"]
simple-device = []
