[package]
name = "virtio-media-ffmpeg-decoder"
version = "0.0.6"
edition = "2021"

[dependencies]
anyhow = "1.0"
enumn = "0.1.12"
libc = "0.2.155"
log = "0.4.20"
nix = { version = "0.28", features = ["fs", "mman"] }
thiserror = "1.0"
virtio-media = { path = "../../device" }

[build-dependencies]
bindgen = "0.63"
pkg-config = "0.3"
